# dpm

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  TODO  build  defines.lua  dpm.c  luaobj.c  luaobj.h  portability.h  proxy.h  sha1.c  sha1.h  startup.lua  toast.c  toast.lua
doc/: API.txt
lua/: demo-autoexplain.lua  demo-direct.lua  demo-lib.lua  dpml.lua  startup.lua
